Update latitude and longitude input format in popup. Swap the order in placeholder and error messages to reflect the correct format of 经度,纬度. Adjust default value in the input field accordingly for consistency.

--- a/ext/popup.html
+++ b/ext/popup.html
@@ -88,7 +88,7 @@
         <div class="input-row">
           <div class="field main-field">
             <label for="latlng">经纬度</label>
-            <input id="latlng" type="text" inputmode="decimal" placeholder="纬度,经度 (如: 37.775,-122.418)" />
+            <input id="latlng" type="text" inputmode="decimal" placeholder="经度,纬度 (如: -122.418,37.775)" />
           </div>
           <div class="field tiny-field">
             <label for="res">网格级别</label>
